# kf

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTE.md  README.md
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  MapBenchmark.cpp  Time.h
include/: CMakeLists.txt
include/kf/: ASimpleString.h  AdjacentView.h  Allocator.h  ArrayUtils.h  Base64.h  Bitmap.h  BitmapIterator.h  BitmapRangeIterator.h  ConditionVariable.h  DoubleLinkedList.h  DoubleLinkedListEntry.h  EResourceExclusiveLock.h  EarlyAllocator.h  EncodingDetector.h  Event.h  FilenameUtils.h  FltCommunicationPort.h  FltResourceSharedLock.h  GenericTableAvl.h  Guard.h  Hex.h  IWinApi.h  LinkedTreeMap.h  Map.h  MapAllocator.h  RecursiveAutoSpinLock.h  Scanner.h  ScopeFailure.h  ScopedBuffer.h  Semaphore.h  Singleton.h  SpanUtils.h  TextDetector.h  ThreadPool.h  TimerThread.h  TreeMap.h  USimpleString.h  UString.h  UStringBuilder.h  VariableSizeStruct.h  (+1 more)
include/kf/algorithm/: timsort.h
include/kf/containers/: DoubleLinkedListConstIterator.h  DoubleLinkedListDescendingIterator.h  DoubleLinkedListDestroyer.h  DoubleLinkedListIterator.h  LinkedTreeMap.h
include/kf/encoding/: Base64.h  Hex.h  TextDetector.h
include/kf/ext/: timsort.h
include/kf/filesystem/: FilenameUtils.h
include/kf/guard/: FltWorkItem.h  ScopedBuffer.h
include/kf/patterns/: Observer.h
include/kf/stl/: BuildHelpers.h  basic_string  map  memory  new  string  vector
include/kf/stl/backport/ranges/: ranges
include/kf/stl/backport/ranges/detail/: adjacent_view.h
include/kf/stl/backport/utility/: utility
include/kf/stl/backport/utility/detail/: to_underlying.h
include/kf/string/: Scanner.h
include/kf/sync/: ConditionVariable.h  EResourceExclusiveLock.h  FltResourceExclusiveLock.h
include/kf/thread/: Thread.h  TimerThread.h
include/kf/transport/: FltCommunicationPort.h
kfbenchmark/: CMakeLists.txt  MapBenchmark.cpp  Time.h  pch.h
test/: ASimpleStringTest.cpp  AdjacentView.cpp  Algorithm.cpp  AlgorithmTest.cpp  ArrayUtilsTest.cpp  AutoSpinLockTest.cpp  Base64.cpp  Base64Test.cpp  BasicStringTest.cpp  Bitmap.cpp  BitmapRangeIterator.cpp  CMakeLists.txt  ConditionVariableTest.cpp  DoubleLinkedListTest.cpp  EResourceSharedLockTest.cpp  EResourceTest.cpp  EncodingDetector.cpp  EncodingDetectorTest.cpp  EventTest.cpp  FilenameUtilsTest.cpp  FilenameUtilsTest.cpp.backup  FltCommunicationPortTest.cpp  GuardTest.cpp  Hex.cpp  HexTest.cpp  IntrusivePtr.cpp  IntrusivePtrTest.cpp  LinkedTreeMapTest.cpp  Map.cpp  MapTest.cpp  ObserverTest.cpp  RecursiveAutoSpinLockTest.cpp  ScopeExitTest.cpp  ScopeFailureTest.cpp  SemaphoreTest.cpp  SingletonTest.cpp  SpanUtilsTest.cpp  StringTest.cpp  TextDetector.cpp  TextDetectorTest.cpp  (+18 more)
